--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Popular Movies</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_most_popular">Most Popular Movies</string>
+    <string name="action_top_rated">Top Rated Movies</string>
     <string name="error_description">Problem with connection</string>
     <string name="api_key"></string>
     <string name="language">it-IT</string>
